Don't allow to enter infinite values for plot ranges leading to crashes.

BUG: 401087
FIXED-IN: 2.6